@@ -1,4 +1,6 @@
-﻿namespace Caliburn.PresentationFramework.Parsers
+﻿using System.Text.RegularExpressions;
+
+namespace Caliburn.PresentationFramework.Parsers
 {
     using System;
     using System.Linq;
@@ -11,6 +13,7 @@
     public abstract class MessageParserBase<T> : IMessageParser
         where T : IRoutedMessage, new()
     {
+        private static readonly Regex _regex = new Regex(@",(?=(?:[^']*'[^']*')*(?![^']*'))");
         private readonly IMessageBinder _messageBinder;
 
 #if !SILVERLIGHT
@@ -20,8 +23,8 @@
         /// <summary>
         /// Initializes a new instance of the <see cref="MessageParserBase{T}"/> class.
         /// </summary>
-        protected MessageParserBase(IMessageBinder messageBinder) 
-            : this(messageBinder, UpdateSourceTrigger.PropertyChanged) {}
+        protected MessageParserBase(IMessageBinder messageBinder)
+            : this(messageBinder, UpdateSourceTrigger.PropertyChanged) { }
 
         /// <summary>
         /// Initializes a new instance of the <see cref="MessageParserBase{T}"/> class.
@@ -57,17 +60,23 @@
 
             var headAndTail = ParseHeadAndTail(messageText, message);
 
-            var coreAndParameters = headAndTail[0]
-                .Split(new[] {"(", ")"}, StringSplitOptions.RemoveEmptyEntries);
+            var openingParenthesisIndex = headAndTail[0].IndexOf('(');
+            if (openingParenthesisIndex < 0) openingParenthesisIndex = headAndTail[0].Length;
+            var closingParenthesisIndex = headAndTail[0].LastIndexOf(')');
+            if (closingParenthesisIndex < 0) closingParenthesisIndex = headAndTail[0].Length;
 
-            SetCore(message, target, coreAndParameters[0].Trim());
+            var core = headAndTail[0].Substring(0, openingParenthesisIndex).Trim();
 
-            if(coreAndParameters.Length == 2)
+            SetCore(message, target, core);
+
+            if (closingParenthesisIndex - openingParenthesisIndex > 1)
             {
-                var parameters = coreAndParameters[1]
-                    .Split(new[] {","}, StringSplitOptions.RemoveEmptyEntries);
+                var paramString = headAndTail[0].Substring(openingParenthesisIndex + 1,
+                    closingParenthesisIndex - openingParenthesisIndex - 1);
 
-                foreach(var parameter in parameters)
+                var parameters = _regex.Split(paramString);
+
+                foreach (var parameter in parameters)
                 {
                     message.Parameters.Add(
                         CreateParameter(target, parameter.Trim())
@@ -96,16 +105,16 @@
         {
             int indexOfColon = messageText.LastIndexOf(':');
 
-            if(indexOfColon == -1)
-                return new[] {messageText.Trim()}; //no tail
+            if (indexOfColon == -1)
+                return new[] { messageText.Trim() }; //no tail
 
             int indexOfParen = messageText.LastIndexOf(')');
 
-            if(indexOfParen == -1)
+            if (indexOfParen == -1)
                 return messageText.Split(':').Select(x => x.Trim()).ToArray(); //no parameters
 
-            if(indexOfColon < indexOfParen)
-                return new[] {messageText.Trim()}; //no tail
+            if (indexOfColon < indexOfParen)
+                return new[] { messageText.Trim() }; //no tail
 
             return new[]
             {
@@ -118,8 +127,8 @@
         {
             var actualParameter = new Parameter();
 
-            if (parameter.StartsWith("'"))
-                actualParameter.Value = parameter.TrimStart('\'').TrimEnd('\'');
+            if (parameter.StartsWith("'") && parameter.EndsWith("'"))
+                actualParameter.Value = parameter.Substring(1, parameter.Length - 2);
             else if (_messageBinder.IsSpecialValue(parameter) || char.IsNumber(parameter[0]))
                 actualParameter.Value = parameter;
             else
