@@ -13,6 +13,7 @@ V1.1 RTW
 -Applied jagregory's patch to add single key gestures to WPF and Caliburn.
 -Applied marcoamendola's patch for enabling property path syntax with Preview and Dependency attributes. So you can now do things like [Dependencies("Model.IsValid")].
 -Applied marcoamendola's patch enabling type hinting for polymorphic databinding in Caliburn.Testability.
+-Applied etobi's patch to greatly improve Caliburn's parameter parsing in ActionMessages and CommandMessages. See http://caliburn.codeplex.com/WorkItem/View.aspx?WorkItemId=4644 for an explanation.
 
 V1 RTW
 -The DefaultBinder will now throw on type activation failure.
